# ic_mock_api

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/rust_hello/: Cargo.toml
src/rust_hello/src/: lib.rs
src/rust_hello/src/market/: mock.rs
src/rust_hello/src/msg/: http.rs  mod.rs  rust_hello.did
src/rust_hello/src/util/: http_common_handlers.rs  mod.rs
src/rust_hello_dioxus/: Cargo.toml  index.html
src/rust_hello_dioxus/src/: lib.rs  main.rs
