[package]
name = "rust_hello_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
futures = "0.3.21"
tracing = "0.1.35"
tracing-wasm = "0.2"
dioxus = {version = "0.2.4", features =["web"]}
reqwest = "0.11.11"
serde_json = "1.0.82"